[gd_scene load_steps=25 format=2]

[ext_resource path="res://Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=3]
[ext_resource path="res://Hboxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Hboxes/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://white_shader.shader" type="Shader" id=10]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 10 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "fly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=8]

[sub_resource type="CapsuleShape2D" id=9]
radius = 5.90828
height = 8.97338

[sub_resource type="CircleShape2D" id=10]

[sub_resource type="CapsuleShape2D" id=11]
height = 36.304

[sub_resource type="CircleShape2D" id=12]

[sub_resource type="Animation" id=13]
resource_name = "startBlink"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=14]
resource_name = "stopBlink"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 3 )
friction = 299
acceleration = 100
maxSpeed = 120

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
frames = SubResource( 7 )
animation = "fly"
frame = 1
playing = true
offset = Vector2( 0, -12 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.48, 0.320001 )
shape = SubResource( 8 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 105.394, -41.3995 )
shape = SubResource( 9 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 3

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.333333 )
position = Vector2( 0, 9.05413 )
scale = Vector2( 4.91782, 5 )
shape = SubResource( 10 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -74.7714, -35.3048 )
scale = Vector2( 0.439998, 0.201344 )
shape = SubResource( 11 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, -9.36501 )

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( -87.0823, 81.9067 )
scale = Vector2( 0.639999, 0.600001 )
shape = SubResource( 12 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]
position = Vector2( 35.2303, -4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/startBlink = SubResource( 13 )
anims/stopBlink = SubResource( 14 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invince_end" from="Hurtbox" to="." method="_on_Hurtbox_invince_end"]
[connection signal="invince_start" from="Hurtbox" to="." method="_on_Hurtbox_invince_start"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
